# spotify

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  auth.py  client.py  main.py  models.py
