[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-top-songs"
version = "1.0.0"
description = "Get your most listened Spotify tracks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
spotify-top-songs = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
